<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abodx">Abodx</string>
    <string name="aedittiles">Edit Titles</string>
    <string name="agetblocked">Get Blocked Users</string>
    <string name="allow_rejoin">Allow Rejoin</string>
    <string name="app_name">AminoX</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asendmessage">Send Message</string>
    <string name="board">Board</string>
    <string name="bootloader">Bootloader</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brand">Brand</string>
    <string name="button">Button</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="checkin">Check-In</string>
    <string name="checking">Checking…</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="coinsender">Send Coins</string>
    <string name="community">Community</string>
    <string name="community_id">Community ID</string>
    <string name="copy_error">Copy Error</string>
    <string name="copy_sid">Copy SID</string>
    <string name="credits">Credits</string>
    <string name="creditsLink">Made by Slimakoi</string>
    <string name="delimiter">:</string>
    <string name="developer_of_aminox">Developer of AminoX</string>
    <string name="developing_app_protection">Developing, App Protection</string>
    <string name="device">Device</string>
    <string name="deviceId">Device ID</string>
    <string name="discord_server">Join the Discord Server</string>
    <string name="display">Display</string>
    <string name="email">Email</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="get_banned_users">Get Banned Users</string>
    <string name="global">Is Global</string>
    <string name="hardware">Hardware</string>
    <string name="hiddenblogs">Get Hidden Blogs</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="host">Host</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="id">ID</string>
    <string name="idfinder">ID Finder</string>
    <string name="infoAndroidId">Android ID</string>
    <string name="infoOsCodename">OS Codename</string>
    <string name="infoOsIncremental">OS Incremental</string>
    <string name="infoOsRelease">OS Release</string>
    <string name="infoOsVersion">OS Version</string>
    <string name="infoSecurity">Security Patch</string>
    <string name="infoSignatureId">Signature ID</string>
    <string name="info_info">Information about your device</string>
    <string name="information">Info</string>
    <string name="invalid_community">INVALID_COMMUNITY_NAME</string>
    <string name="invalid_title">INVALID_TITLE_NAME</string>
    <string name="isPremium">Premium</string>
    <string name="item_view_role_description">Tab</string>
    <string name="kickuser">Kick User</string>
    <string name="latest_version">Latest Version</string>
    <string name="liveChat">Chat Logger</string>
    <string name="login">Login</string>
    <string name="login_info">Login into account</string>
    <string name="lottery">Play Lottery</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="materialcolorpicker__app_name">Android Material Color Picker Dialog</string>
    <string name="materialcolorpicker__btnSelectColor">Select</string>
    <string name="materialcolorpicker__descLib">Material Color Picker Dialog</string>
    <string name="materialcolorpicker__errHex">Hex Code Format incorrect</string>
    <string name="materialcolorpicker__hash">\#</string>
    <string name="materialcolorpicker__inputColor">Color:</string>
    <string name="model">Model</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="nan">NaN</string>
    <string name="nickname">Nickname</string>
    <string name="object_id">Object ID</string>
    <string name="ok">OK</string>
    <string name="okcolorbutton">okColorButton</string>
    <string name="open_link">Open Link</string>
    <string name="password">Password</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="quizurl">Quiz URL</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="sid">SID</string>
    <string name="sidlogin">SID Login</string>
    <string name="start_as_group_bypass">Start as Group (Bypass)</string>
    <string name="start_chat">Start Chat</string>
    <string name="target_url">Target URL</string>
    <string name="unknown">Unknown</string>
    <string name="aminox_logo_description">AminoX Logo</string>
    <string name="neko">Neko!</string>
    <string name="nyah">Nyah!</string>
    <string name="nekoText">Oh no! You know you shouldnt be here, right?</string>
    <string name="feedback">Feedback</string>
</resources>