<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/MainActivityLayout"
    android:padding="6.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:textColor="#ff11f7d1"
        android:id="@id/buttonSidLogin"
        android:background="@drawable/buttongradient2"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="128.0dip"
        android:layout_height="48.0dip"
        android:layout_marginTop="24.0dip"
        android:text="@string/sidlogin"
        android:contentDescription="@string/login_info"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintVertical_bias="0.0" />
    <ImageView
        android:id="@id/AminoXLogo"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/aminox_logo_description" />
    <RelativeLayout
        android:gravity="center"
        android:id="@id/mainLoadingPanel"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <Button
        android:id="@id/buttonInformation"
        android:layout_width="52.0dip"
        android:layout_height="34.0dip"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttongradient2"
        android:clickable="true"
        android:contentDescription="@string/info_info"
        android:focusable="true"
        android:text="@string/information"
        android:textColor="#ff11f7d1"
        app:layout_constraintBottom_toTopOf="@+id/buttonFeedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:textColor="#ff11f7d1"
        android:id="@id/buttonFeedback"
        android:background="@drawable/buttongradient2"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="34.0dip"
        android:text="@string/feedback"
        android:contentDescription="@string/info_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:textColor="@color/white"
        android:textColorHint="#ffb3aeca"
        android:id="@id/inputEmail"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:autofillHints=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AminoXLogo"
        app:layout_constraintVertical_bias="0.01" />
    <Button
        android:textColor="#ff130e41"
        android:id="@id/buttonLogin"
        android:background="@drawable/buttongradient"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="128.0dip"
        android:layout_height="48.0dip"
        android:layout_marginTop="24.0dip"
        android:text="@string/login"
        android:contentDescription="@string/login_info"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonSidLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:textSize="24.0sp"
        android:textColor="#ff130e41"
        android:textColorHint="#ffa1a1a1"
        android:gravity="center"
        android:id="@id/result"
        android:layout_width="344.0dip"
        android:layout_height="108.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintVertical_bias="0.42" />
    <EditText
        android:textColor="@color/white"
        android:textColorHint="#ffb3aeca"
        android:id="@id/inputSid"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:hint="@string/sid"
        android:ems="10"
        android:inputType="text"
        android:autofillHints=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AminoXLogo"
        app:layout_constraintVertical_bias="0.01" />
    <EditText
        android:textColor="@color/white"
        android:textColorHint="#ffb3aeca"
        android:id="@id/inputPassword"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_marginTop="8.0dip"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:textColor="#ffd0d0e8"
        android:autoLink="web"
        android:linksClickable="true"
        android:id="@id/infoTxtCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Made by Slimakoi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="HardcodedText" />
    <ImageView
        android:id="@id/imageUpdate"
        android:layout_width="32.0dip"
        android:layout_height="32.0dip"
        android:contentDescription="@string/check_for_updates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_update" />
</androidx.constraintlayout.widget.ConstraintLayout>