<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActionSendCoinsLayout"
    android:layout_width="320dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:background="@color/backgroundDarker"
    android:padding="6dp"
    tools:context=".ActionSelectorActivity">

    <Button
        android:id="@+id/buttonAQuizPlayerSend"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttongradient"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonAQuizPlayerClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputQuizPlayer"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/inputQuizPlayer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/inputbox"
        android:cursorVisible="true"
        android:gravity="left|center"
        android:hint="@string/quizurl"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/greyVeryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonAQuizPlayerClose"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttongradient"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/close"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>